# laser-wallet

./: README.md  bun.lockb  makefile
actix-crud/: Cargo.toml  Makefile
actix-crud/migrations/: 20241028153223_init.down.sql  20241028153223_init.up.sql
actix-crud/src/: main.rs
actix-crud/src/models/: mod.rs  models.rs
actix-crud/src/routes/: mod.rs  routes.rs
laser_wallet/: bun.lockb  package.json  vite.config.ts
laser_wallet/src/: App.css  App.tsx  index.tsx
laser_wallet/src-tauri/: Cargo.toml  tauri.conf.json
laser_wallet/src-tauri/src/: lib.rs
laser_wallet/src-tauri/src/fs/: fs.rs
laser_wallet/src-tauri/src/wallet/: keypair.rs  mod.rs
laser_wallet/src-tauri/user_data/: seed.txt
laser_wallet/src/components/StartPage/: StartPage.css  StartPage.tsx
laser_wallet/src/components/home/: Home.tsx
laser_wallet/src/components/importWallet/: importWallet.css  importWallet.tsx
laser_wallet/src/components/newWallet/: newWallet.tsx
laser_wallet/src/components/ui/: PortfolioViewer.module.css  PortfolioViewer.tsx  WalletActions.tsx
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/transactions/: transactions.rs
src-tauri/src/wallet/: keypair.rs
src/components/StartPage/: StartPage.css  StartPage.tsx
src/components/home/: Home.module.css
src/components/importWallet/: importWallet.module.css
src/components/newWallet/: newWallet.module.css
