[package]
name = "actix-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = "1.26.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
