[package]
name = "laser_wallet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "laser_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = { version = "2.1.0", features = ["rand"] }
solana-web3-sys = "0.1.1"
solana-sdk = "1.17"
futures = "0.3.31"
aes = "0.8.4"
tauri-plugin-store = "2.1.0"
tauri-plugin-fs = "2"
solana-client = "2"
bincode = "1.3.3"
borsh = "1.5.3"


